--- a/gb/23/4/28/n13983622.md
+++ b/gb/23/4/28/n13983622.md
@@ -1,71 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>嘉大医学院筹备处暨中医药产创中心揭牌</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/04/id13983623-611886-600x400.jpg" />
 <h6>嘉义大学医学院筹备处暨中医药产业创新发展中心揭牌后贵宾合影。（李撷璎／大纪元）
 </h6>
 <hr>
-<p>【大纪元2023年04月28日讯】（大纪元记者李撷璎台湾嘉义报导）受到中西医界的关注，嘉义大学今（28）日上午在兰潭校区举行“国立嘉义大学医学院筹备处暨<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB%E8%8D%AF.md#1">中医药</a>产业创新发展中心”揭牌记者会，邀请卫福部中药司司长黄怡超、林务局局长林华庆、嘉义市长黄敏惠及中医师公会全国联合会理事长詹永兆等多位贵宾莅临揭牌仪式。</p>
-<figure id="13983624" aria-describedby="caption-13983624" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983624-611887-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13983624-611887-450x253.jpg" alt="嘉大校长林翰谦说明嘉大成立医学院4大理由、3大优势、2大教研量能及1个大嘉义美好未来。" width="500" /></a><figcaption id="caption-13983624" class="wp-caption-text">嘉大校长林翰谦说明嘉大成立医学院4大理由、3大优势、2大教研量能及1个大嘉义美好未来。（李撷璎／大纪元）</figcaption></figure>
-<p>近年来，政府为降低对进口中国药材的倚赖，推广在地药材生产规格化、中药科学化、中草药保健食品及保养品的发展，努力推动中药品质管理政策。但台湾中医师以基层门诊服务为主，临床研究和中西医结合照护人才严重不足，有鉴于此，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E5%A4%A7%E5%8C%BB%E5%AD%A6%E9%99%A2.md#1">嘉大医学院</a>的设立主要在培养研究型中医师，藉以提升<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB%E8%8D%AF.md#1">中医药</a>研究能力，为中医药产业永续发展奠定良好基础。</p>
-<figure id="13983625" aria-describedby="caption-13983625" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983625-611888-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13983625-611888-450x253.jpg" alt="嘉大副校长陈瑞祥简报中医药产业创新发展中心的发展方向。" width="500" /></a><figcaption id="caption-13983625" class="wp-caption-text">嘉大副校长陈瑞祥简报中医药产业创新发展中心的发展方向。（李撷璎／大纪元）</figcaption></figure>
-<p>去年6月起嘉大校长林翰谦率领3位副校长与生科院教师团队，为申请设置医学院积极展开拜访请益，与各界人士交换意见及讨论合作方向。林翰谦校长表示，嘉义是孕育良医的沃土，嘉大具有百年建校的基础、丰沛的医疗教研量能及地理位置优越，可与邻近医院互惠共生，推动社区医疗服务。彰投云嘉缺乏医学院，有赖医学教育平衡发展，相信嘉大在逾11万位校友的支持与在地民众殷切盼望下成立医学院，必能串联县市医疗机构与产业资源，建构产官学研合作平台，打造大嘉义地区成为<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%99%BA%E6%85%A7%E7%A7%91%E6%8A%80.md#1">智慧科技</a>及医疗力的医疗聚落。</p>
-<figure id="13983626" aria-describedby="caption-13983626" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983626-611889-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13983626-611889-450x253.jpg" alt="产官学各界贵宾云集莅临嘉大医学院筹备处暨中医药产业创新发展中心揭牌活动。" width="500" /></a><figcaption id="caption-13983626" class="wp-caption-text">产官学各界贵宾云集莅临<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E5%A4%A7%E5%8C%BB%E5%AD%A6%E9%99%A2.md#1">嘉大医学院</a>筹备处暨中医药产业创新发展中心揭牌活动。（李撷璎／大纪元）</figcaption></figure>
+<p>【大纪元2023年04月28日讯】（大纪元记者李撷璎台湾嘉义报导）受到中西医界的关注，嘉义大学今（28）日上午在兰潭校区举行“国立嘉义大学医学院筹备处暨中医药产业创新发展中心”揭牌记者会，邀请卫福部中药司司长黄怡超、林务局局长林华庆、嘉义市长黄敏惠及中医师公会全国联合会理事长詹永兆等多位贵宾莅临揭牌仪式。</p>
+<figure id="13983624" aria-describedby="caption-13983624" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983624-611887-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13983624-611887-450x253.jpg" alt="嘉大校长林翰谦说明嘉大成立医学院4大理由、3大优势、2大教研量能及1个大嘉义美好未来。" width="500" /></a><figcaption id="caption-13983624" class="wp-caption-text">嘉大校长林翰谦说明嘉大成立医学院4大理由、3大优势、2大教研量能及1个大嘉义美好未来。（李撷璎／大纪元）</figcaption></figure>
+<p>近年来，政府为降低对进口中国药材的倚赖，推广在地药材生产规格化、中药科学化、中草药保健食品及保养品的发展，努力推动中药品质管理政策。但台湾中医师以基层门诊服务为主，临床研究和中西医结合照护人才严重不足，有鉴于此，嘉大医学院的设立主要在培养研究型中医师，藉以提升中医药研究能力，为中医药产业永续发展奠定良好基础。</p>
+<figure id="13983625" aria-describedby="caption-13983625" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983625-611888-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13983625-611888-450x253.jpg" alt="嘉大副校长陈瑞祥简报中医药产业创新发展中心的发展方向。" width="500" /></a><figcaption id="caption-13983625" class="wp-caption-text">嘉大副校长陈瑞祥简报中医药产业创新发展中心的发展方向。（李撷璎／大纪元）</figcaption></figure>
+<p>去年6月起嘉大校长林翰谦率领3位副校长与生科院教师团队，为申请设置医学院积极展开拜访请益，与各界人士交换意见及讨论合作方向。林翰谦校长表示，嘉义是孕育良医的沃土，嘉大具有百年建校的基础、丰沛的医疗教研量能及地理位置优越，可与邻近医院互惠共生，推动社区医疗服务。彰投云嘉缺乏医学院，有赖医学教育平衡发展，相信嘉大在逾11万位校友的支持与在地民众殷切盼望下成立医学院，必能串联县市医疗机构与产业资源，建构产官学研合作平台，打造大嘉义地区成为智慧科技及医疗力的医疗聚落。</p>
+<figure id="13983626" aria-describedby="caption-13983626" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983626-611889-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13983626-611889-450x253.jpg" alt="产官学各界贵宾云集莅临嘉大医学院筹备处暨中医药产业创新发展中心揭牌活动。" width="500" /></a><figcaption id="caption-13983626" class="wp-caption-text">产官学各界贵宾云集莅临嘉大医学院筹备处暨中医药产业创新发展中心揭牌活动。（李撷璎／大纪元）</figcaption></figure>
 <p>医学院筹备处暨中医药产业创新发展中心主任陈瑞祥副校长指出，嘉大具有完整的临床前动物实验与验证场域、中草药育种与种植人才培育教研单位，以及智慧农业学生实习农场。未来中心将以中医药研究能量提升、推广中药溯源管理、确效及安全及中药业界品质管理，强化药政管理需求。加上植物绿色萃取工厂（药用作物制程管理）的绿色制程与绿色循环技术、中药有效成分活性分析及制定，以及中药指标成分测定与中医药制剂品质管理，推动台湾中医药产业符合联合国永续发展目标。</p>
-<figure id="13983629" aria-describedby="caption-13983629" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983629-611890-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13983629-611890-450x253.jpg" alt="嘉义市长黄敏惠致词。" width="500" /></a><figcaption id="caption-13983629" class="wp-caption-text">嘉义市长黄敏惠致词。（李撷璎／大纪元）</figcaption></figure>
+<figure id="13983629" aria-describedby="caption-13983629" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983629-611890-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13983629-611890-450x253.jpg" alt="嘉义市长黄敏惠致词。" width="500" /></a><figcaption id="caption-13983629" class="wp-caption-text">嘉义市长黄敏惠致词。（李撷璎／大纪元）</figcaption></figure>
 <p>当天活动除介绍医学院筹备处与中医药产业创新发展中心，也邀到多家参与经济部中小企业大健康产业加速器的中医药厂与生技公司厂商代表与会，未来嘉大透过与中药临床学会及经济部资源的交互作用，落实中医药产业创新发展，培值全人医学人才及新创健康产业。</p>
-<figure id="13983630" aria-describedby="caption-13983630" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983630-611891-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13983630-611891-450x253.jpg" alt="卫福部中药司司长黄怡超致词。" width="500" /></a><figcaption id="caption-13983630" class="wp-caption-text">卫福部中药司司长黄怡超致词。（李撷璎／大纪元）</figcaption></figure>
-<figure id="13983631" aria-describedby="caption-13983631" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983631-611892-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13983631-611892-450x300.jpg" alt="嘉义大学医学院筹备处暨中医药产业创新发展中心今天(28日)举行揭牌记者会室外大合照。" width="500" /></a><figcaption id="caption-13983631" class="wp-caption-text">嘉义大学医学院筹备处暨中医药产业创新发展中心4月28日举行揭牌记者会室外大合照。（李撷璎／大纪元）</figcaption></figure>
-<figure id="13983633" aria-describedby="caption-13983633" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983633-611894-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13983633-611894-450x253.jpg" alt="黄振玮执行长介绍产业加速器，促成“大小共创，引领台湾软硬整合的新势力！”" width="500" /></a><figcaption id="caption-13983633" class="wp-caption-text">黄振玮执行长介绍产业加速器，促成“大小共创，引领台湾软硬整合的新势力！”（李撷璎／大纪元）</figcaption></figure>
-<figure id="13983632" aria-describedby="caption-13983632" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983632-611893-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/04/id13983632-611893-450x253.jpg" alt="合照。" width="500" /></a><figcaption id="caption-13983632" class="wp-caption-text">合照。（李撷璎／大纪元）</figcaption></figure>
+<figure id="13983630" aria-describedby="caption-13983630" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983630-611891-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13983630-611891-450x253.jpg" alt="卫福部中药司司长黄怡超致词。" width="500" /></a><figcaption id="caption-13983630" class="wp-caption-text">卫福部中药司司长黄怡超致词。（李撷璎／大纪元）</figcaption></figure>
+<figure id="13983631" aria-describedby="caption-13983631" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983631-611892-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13983631-611892-450x300.jpg" alt="嘉义大学医学院筹备处暨中医药产业创新发展中心今天(28日)举行揭牌记者会室外大合照。" width="500" /></a><figcaption id="caption-13983631" class="wp-caption-text">嘉义大学医学院筹备处暨中医药产业创新发展中心4月28日举行揭牌记者会室外大合照。（李撷璎／大纪元）</figcaption></figure>
+<figure id="13983633" aria-describedby="caption-13983633" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983633-611894-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13983633-611894-450x253.jpg" alt="黄振玮执行长介绍产业加速器，促成“大小共创，引领台湾软硬整合的新势力！”" width="500" /></a><figcaption id="caption-13983633" class="wp-caption-text">黄振玮执行长介绍产业加速器，促成“大小共创，引领台湾软硬整合的新势力！”（李撷璎／大纪元）</figcaption></figure>
+<figure id="13983632" aria-describedby="caption-13983632" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/04/id13983632-611893-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/04/id13983632-611893-450x253.jpg" alt="合照。" width="500" /></a><figcaption id="caption-13983632" class="wp-caption-text">合照。（李撷璎／大纪元）</figcaption></figure>
 <p>责任编辑：昌英◇</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/8/16/n12334723.md#1">小小药师一日中医药相关知识体验趣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/13/n13643012.md#1">中医药治疗备受信赖 蔡英文：将建构中医医疗照顾体系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/10/n13799424.md#1">嘉大与嘉义长庚医签MOU 齐心争取设医学院</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/17/n13804286.md#1">嘉大携手嘉义医院签署MOU</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/22/n13870776.md#1">一探其中医药奥妙 立夫中医药博物馆特展开展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13982978.md#1">“向．光 琉璃之路”  原民工艺师施秀菊屏美馆首展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13982990.md#1">嘉义县举行112年模范劳工表扬大会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983335.md#1">警专前校长分享孙子兵法：内可修身 外可应变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983005.md#1">关怀据点米食厨艺赛 屏县45社区同场PK</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13982804.md#1">张泰山嘉市民生国中《HOME RUN》签书会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/8/16/n12334723.md#1">小小药师一日中医药相关知识体验趣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/13/n13643012.md#1">中医药治疗备受信赖 蔡英文：将建构中医医疗照顾体系</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/10/n13799424.md#1">嘉大与嘉义长庚医签MOU 齐心争取设医学院</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/17/n13804286.md#1">嘉大携手嘉义医院签署MOU</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/22/n13870776.md#1">一探其中医药奥妙 立夫中医药博物馆特展开展</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308293.md#1">屏县府携手一卡通 用敬老卡助长者智慧生活</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308295.md#1">2421m的回声─阿里山林铁全线纪行 新书发表</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308279.md#1">2024亚太永续奖宜居城市   屏东非六都唯一获选</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308237.md#1">嘉市警体验营 萌警札根永续 正确交安观念</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308197.md#1">关山稻米达人选拔赛 吴承鸿连霸夺冠</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11248166.md#1" target="_blank">【征文】袁斌：中共是怎么炮制“英雄人物”的</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/5/n10364709.md#1" target="_blank">修炼法轮功的中共军官们控告江泽民</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/6/n10032641.md#1" target="_blank">作恶者鉴：迫害法轮功终难逃法网</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/9/n11245885.md#1" target="_blank">新泽西州参众议院联合决议褒奖法轮大法日</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969693.md#1">【古道人生】贞女凭一首诗识破假新郎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975486.md#1">【天道有知】为人着想 给人一食救了自己</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13978646.md#1">【未解之谜】古代开颅手术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13981727.md#1">【未解之谜】美人鱼探秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980703.md#1">美国灵媒谈濒死体验：我看见最美的光和天使</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13982960.md#1">【神韵早期节目】绢舞飞花（2015年制作）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13982850.md#1">【十字路口】美韩日台结盟抗共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983265.md#1">【时事金扫描】习泽通话 普京急赶回克宫？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981494.md#1">分析：中共失礼酿后果 秦刚访菲或空手而归</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13982148.md#1">卢沙野事件发酵中 习近平同泽连斯基通话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981556.md#1">王友群：江泽民24年前狂言的三大恶果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981565.md#1">奥斯卡影帝凯奇自曝曾负巨债：是房地产害的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13982312.md#1">儿时曾受邀反串演男孩 徐娇美国大学毕业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981538.md#1">携子健身被指影响小孩身高 张继聪高EQ回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981635.md#1">杨颖瘦身秘笈被翻出 严苛饮食法引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13983191.md#1">陈佩斯否认坐拥万亩良田 与退耕还林有关？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981212.md#1">世界各地30名百岁人瑞分享长寿秘诀（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980015.md#1">葡萄让血管回春！每天这样吃抗氧化护心脏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977254.md#1">逆转1型糖尿病 这10种天然降糖药一定要利用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13981710.md#1">八成中风可预防 中医教你灸4穴位+5绝招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308276.md#1">珍珠粉有助延缓衰老 改善睡眠 预防骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308560.md#1">【车评】红章的“R” 2024 Honda Civic Type R</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/28/n13983622.htm">嘉大医学院筹备处暨中医药产创中心揭牌</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983622.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/28/n13983622.htm">嘉大医学院筹备处暨中医药产创中心揭牌</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/28/n13983622.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
